--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -3,6 +3,9 @@ FROM node:20-alpine AS builder
 
 WORKDIR /app
 
+# Build argument for API URL (will be replaced at build time)
+ARG VITE_API_URL=https://tracker-backend.fly.dev
+
 # Copy package files
 COPY package*.json ./
 
@@ -11,6 +14,9 @@ RUN npm ci
 
 # Copy source code
 COPY . .
+
+# Set environment variable for build
+ENV VITE_API_URL=$VITE_API_URL
 
 # Build
 RUN npm run build
@@ -24,7 +30,8 @@ COPY nginx.conf /etc/nginx/conf.d/default.conf
 # Copy built files
 COPY --from=builder /app/dist /usr/share/nginx/html
 
-EXPOSE 3000
+# Fly.io uses port 8080 by default
+EXPOSE 8080
 
 CMD ["nginx", "-g", "daemon off;"]
 
