Refactor backend and frontend configurations for deployment
- Updated backend Dockerfile to push the database schema instead of running migrations on startup.
- Increased memory allocation in backend fly.toml from 256mb to 512mb.
- Enhanced CORS configuration in backend to allow requests from specific origins and subdomains.
- Changed frontend Dockerfile to use a new API URL for deployment.
- Adjusted frontend fly.toml to reflect the new app name and updated configuration settings.

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -49,6 +49,6 @@ USER fastify
 ENV PORT=8080
 EXPOSE 8080
 
-# Run migrations and start server
-CMD ["dumb-init", "sh", "-c", "npx prisma migrate deploy && npm start"]
+# Push schema to database and start server
+CMD ["dumb-init", "sh", "-c", "npx prisma db push --skip-generate && npm start"]
 
