--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 
 # Build argument for API URL (will be replaced at build time)
-ARG VITE_API_URL=https://tracker-backend.fly.dev
+ARG VITE_API_URL=https://tracker-backend-icy-glitter-4734.fly.dev
 
 # Copy package files
 COPY package*.json ./
