--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -1,22 +1,12 @@
-# fly.toml app configuration file generated for tracker-backend-icy-glitter-4734 on 2025-12-20T14:15:06-03:00
+# fly.toml app configuration file generated for tracker-api-yhorca on 2025-12-20T17:49:08Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'tracker-backend-icy-glitter-4734'
+app = 'tracker-api-yhorca'
 primary_region = 'gru'
 
 [build]
-  dockerfile = 'Dockerfile'
-
-[env]
-  DATABASE_URL = 'file:/data/tracker.db'
-  NODE_ENV = 'production'
-  PORT = '8080'
-
-[[mounts]]
-  source = 'tracker_data'
-  destination = '/data'
 
 [http_service]
   internal_port = 8080
@@ -26,13 +16,8 @@ primary_region = 'gru'
   min_machines_running = 0
   processes = ['app']
 
-  [[http_service.checks]]
-    interval = '30s'
-    timeout = '5s'
-    grace_period = '10s'
-    method = 'GET'
-    path = '/health'
-
 [[vm]]
-  memory = '512mb'
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
