--- a/backend/package.json
+++ b/backend/package.json
@@ -17,6 +17,7 @@
     "@fastify/cors": "^9.0.1",
     "@fastify/jwt": "^8.0.0",
     "@fastify/oauth2": "^7.8.0",
+    "@flydotio/litestream": "^1.0.1",
     "@prisma/client": "^5.22.0",
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
@@ -28,6 +29,8 @@
     "prisma": "^5.22.0",
     "tsx": "^4.16.2",
     "typescript": "^5.5.3"
+  },
+  "dockerfile": {
+    "litestream": true
   }
 }
-
