--- a/backend/fly.toml
+++ b/backend/fly.toml
@@ -40,6 +40,7 @@ primary_region = 'gru'
     path = '/health'
 
 [[vm]]
-  memory = '512mb'
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
