Update Dockerfile and fly.toml for improved deployment configuration
- Added OpenSSL installation to the backend Dockerfile for Prisma compatibility.
- Updated VITE_API_URL in fly.toml to point to the new tracker API endpoint.

--- a/frontend/fly.toml
+++ b/frontend/fly.toml
@@ -6,7 +6,7 @@ primary_region = 'gru'
 [build]
   dockerfile = 'Dockerfile'
   [build.args]
-    VITE_API_URL = 'https://tracker-backend-icy-glitter-4734.fly.dev'
+    VITE_API_URL = 'https://tracker-api-yhorca.fly.dev'
 
 [http_service]
   internal_port = 8080
