--- a/frontend/fly.toml
+++ b/frontend/fly.toml
@@ -1,6 +1,6 @@
 # Fly.io configuration for Tracker Frontend
 
-app = 'tracker-frontend-icy-glitter'
+app = 'tracker-front-k8nyza'
 primary_region = 'gru'
 
 [build]
@@ -16,13 +16,8 @@ primary_region = 'gru'
   min_machines_running = 0
   processes = ['app']
 
-  [[http_service.checks]]
-    interval = '30s'
-    timeout = '5s'
-    grace_period = '5s'
-    method = 'GET'
-    path = '/health'
-
 [[vm]]
-  memory = '256mb'
+  memory = '1gb'
+  cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
