--- a/frontend/fly.toml
+++ b/frontend/fly.toml
@@ -1,4 +1,4 @@
-# fly.toml app configuration file generated for tracker-front-k8nyza on 2025-12-20T18:35:39Z
+# fly.toml app configuration file for tracker-front-k8nyza
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
@@ -7,6 +7,9 @@ app = 'tracker-front-k8nyza'
 primary_region = 'gru'
 
 [build]
+  dockerfile = 'Dockerfile'
+  [build.args]
+    VITE_API_URL = 'https://tracker-api-yhorca.fly.dev'
 
 [http_service]
   internal_port = 8080
@@ -16,8 +19,14 @@ primary_region = 'gru'
   min_machines_running = 0
   processes = ['app']
 
+  [[http_service.checks]]
+    interval = '30s'
+    timeout = '5s'
+    grace_period = '5s'
+    method = 'GET'
+    path = '/health'
+
 [[vm]]
-  memory = '1gb'
+  memory = '256mb'
   cpu_kind = 'shared'
   cpus = 1
-  memory_mb = 1024
