--- a/frontend/fly.toml
+++ b/frontend/fly.toml
@@ -1,15 +1,12 @@
-# fly.toml app configuration file for tracker-front-k8nyza
+# fly.toml app configuration file generated for tracker-front-k8nyza on 2025-12-20T21:46:02Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
 app = 'tracker-front-k8nyza'
-primary_region = 'gru'
+primary_region = 'iad'
 
 [build]
-  dockerfile = 'Dockerfile'
-  [build.args]
-    VITE_API_URL = 'https://tracker-api-yhorca.fly.dev'
 
 [http_service]
   internal_port = 8080
@@ -19,14 +16,8 @@ primary_region = 'gru'
   min_machines_running = 0
   processes = ['app']
 
-  [[http_service.checks]]
-    interval = '30s'
-    timeout = '5s'
-    grace_period = '5s'
-    method = 'GET'
-    path = '/health'
-
 [[vm]]
-  memory = '256mb'
+  memory = '1gb'
   cpu_kind = 'shared'
   cpus = 1
+  memory_mb = 1024
