Update VITE_API_URL in Dockerfile to point to the new tracker API endpoint

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -4,7 +4,7 @@ FROM node:20-alpine AS builder
 WORKDIR /app
 
 # Build argument for API URL (will be replaced at build time)
-ARG VITE_API_URL=https://tracker-backend-icy-glitter-4734.fly.dev
+ARG VITE_API_URL=https://tracker-api-yhorca.fly.dev
 
 # Copy package files
 COPY package*.json ./
