--- a/frontend/fly.toml
+++ b/frontend/fly.toml
@@ -1,9 +1,9 @@
-# fly.toml app configuration file generated for tracker-zenmya on 2025-12-21T01:03:07Z
+# fly.toml app configuration file generated for tracker-app on 2025-12-21T01:09:57Z
 #
 # See https://fly.io/docs/reference/configuration/ for information about how to use this file.
 #
 
-app = 'tracker-zenmya'
+app = 'tracker-app'
 primary_region = 'gru'
 
 [build]
