chore: update Dockerfile to clarify API URL build argument usage

--- a/frontend/Dockerfile
+++ b/frontend/Dockerfile
@@ -12,7 +12,8 @@ RUN npm install --legacy-peer-deps
 # Copy source code
 COPY . .
 
-# Set environment variable for build
+# Receive API URL as build argument
+ARG VITE_API_URL
 ENV VITE_API_URL=$VITE_API_URL
 
 # Build
