feat: migrate from SQLite to PostgreSQL; update environment configurations and database schema

--- a/.env.production.example
+++ b/.env.production.example
@@ -1,5 +1,6 @@
 # Database
-DATABASE_URL="file:/data/production.db"
+# Format: postgresql://USER:PASSWORD@HOST:PORT/DATABASE?schema=SCHEMA
+DATABASE_URL="postgresql://user:password@host:5432/tracker?schema=public"
 
 # Google OAuth
 # IMPORTANTE: Você precisa configurar as URIs autorizadas no Google Cloud Console:
