--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,6 +1,26 @@
 version: '3.8'
 
 services:
+  postgres:
+    image: postgres:16-alpine
+    container_name: tracker-postgres
+    restart: unless-stopped
+    environment:
+      - POSTGRES_USER=tracker
+      - POSTGRES_PASSWORD=tracker123
+      - POSTGRES_DB=tracker
+    ports:
+      - "5432:5432"
+    volumes:
+      - postgres-data:/var/lib/postgresql/data
+    networks:
+      - tracker-network
+    healthcheck:
+      test: ["CMD-SHELL", "pg_isready -U tracker"]
+      interval: 10s
+      timeout: 5s
+      retries: 5
+
   backend:
     build:
       context: ./backend
@@ -11,7 +31,7 @@ services:
       - "3001:3001"
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=file:/app/data/tracker.db
+      - DATABASE_URL=postgresql://tracker:tracker123@postgres:5432/tracker?schema=public
       - PORT=3001
       - FRONTEND_URL=http://localhost:3000
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
@@ -19,8 +39,9 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
       - RAPIDAPI_KEY=${RAPIDAPI_KEY}
-    volumes:
-      - tracker-data:/app/data
+    depends_on:
+      postgres:
+        condition: service_healthy
     networks:
       - tracker-network
     healthcheck:
@@ -56,6 +77,6 @@ networks:
     driver: bridge
 
 volumes:
-  tracker-data:
+  postgres-data:
     driver: local
 
