--- a/frontend/package.json
+++ b/frontend/package.json
@@ -22,6 +22,7 @@
     "@refinedev/react-hook-form": "^4.8.20",
     "@refinedev/react-router-v6": "^4.6.0",
     "@refinedev/simple-rest": "^5.0.8",
+    "@tanstack/react-query": "^4.42.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
     "react-hook-form": "^7.53.0",
@@ -35,4 +36,3 @@
     "vite": "^5.4.3"
   }
 }
-
