refactor: streamline Dockerfile stages and improve build process for backend and frontend feat: enhance CORS configuration with strict localhost check chore: update package.json and pnpm-lock.yaml with dependency overrides and version upgrades

--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,8 +23,8 @@ services:
 
   backend:
     build:
-      context: ./backend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: backend/Dockerfile
     container_name: tracker-backend
     restart: unless-stopped
     ports:
@@ -53,8 +53,8 @@ services:
 
   frontend:
     build:
-      context: ./frontend
-      dockerfile: Dockerfile
+      context: .
+      dockerfile: frontend/Dockerfile
       args:
         - VITE_API_URL=http://localhost:3001
     container_name: tracker-frontend
