--- a/package.json
+++ b/package.json
@@ -20,6 +20,12 @@
   },
   "engines": {
     "node": ">=18.0.0"
+  },
+  "pnpm": {
+    "overrides": {
+      "esbuild": ">=0.25.0",
+      "fast-jwt": ">=5.0.6"
+    }
   }
 }
 
