refactor: update files

--- a/backend/Dockerfile
+++ b/backend/Dockerfile
@@ -6,44 +6,33 @@ RUN corepack enable
 FROM base AS builder
 WORKDIR /app
 
-# Copy workspace config files
-COPY pnpm-lock.yaml pnpm-workspace.yaml package.json ./
+COPY package.json ./
 
-# Copy package.json for workspace
-COPY backend/package.json ./backend/
-
-# Install dependencies (frozen lockfile to ensure reproducibility)
 RUN pnpm install --frozen-lockfile
 
-# Copy backend source code only
-COPY backend ./backend
+COPY . .
 
-# Build backend
-RUN pnpm --filter tracker-backend build
-RUN pnpm --filter tracker-backend deploy --prod /app/deployed
+RUN pnpm db:generate
+
+RUN pnpm build
 
 FROM base AS runner
 WORKDIR /app
 
-# Install dumb-init and OpenSSL for Prisma
 RUN apk add --no-cache dumb-init openssl
 
-# Create non-root user
 RUN addgroup --system --gid 1001 nodejs
 RUN adduser --system --uid 1001 fastify
 
-# Copy deployed app
-COPY --from=builder --chown=fastify:nodejs /app/deployed .
-# Copy prisma schema which might not be in the deployed package if not in 'files' list
-COPY --from=builder --chown=fastify:nodejs /app/backend/prisma ./prisma
-
-# Create data directory for SQLite if needed
-RUN mkdir -p /data && chown -R fastify:nodejs /data
+COPY --from=builder --chown=fastify:nodejs /app/dist ./dist
+COPY --from=builder --chown=fastify:nodejs /app/node_modules ./node_modules
+COPY --from=builder --chown=fastify:nodejs /app/package.json ./package.json
+COPY --from=builder --chown=fastify:nodejs /app/prisma ./prisma
 
 USER fastify
 
 ENV PORT=10000
+ENV NODE_ENV=production
 EXPOSE 10000
 
-# Push schema to database and start server
 CMD ["dumb-init", "sh", "-c", "npx prisma db push --skip-generate && node dist/server.js"]
