--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -1,26 +1,6 @@
 version: '3.8'
 
 services:
-  postgres:
-    image: postgres:16-alpine
-    container_name: tracker-postgres
-    restart: unless-stopped
-    environment:
-      - POSTGRES_USER=tracker
-      - POSTGRES_PASSWORD=tracker123
-      - POSTGRES_DB=tracker
-    ports:
-      - "5432:5432"
-    volumes:
-      - postgres-data:/var/lib/postgresql/data
-    networks:
-      - tracker-network
-    healthcheck:
-      test: ["CMD-SHELL", "pg_isready -U tracker"]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
   backend:
     build:
       context: .
@@ -31,7 +11,7 @@ services:
       - "3001:3001"
     environment:
       - NODE_ENV=production
-      - DATABASE_URL=postgresql://tracker:tracker123@postgres:5432/tracker?schema=public
+      - DATABASE_URL=file:/app/prisma/dev.db
       - PORT=3001
       - FRONTEND_URL=http://localhost:3000
       - GOOGLE_CLIENT_ID=${GOOGLE_CLIENT_ID}
@@ -39,9 +19,8 @@ services:
       - JWT_SECRET=${JWT_SECRET}
       - JWT_REFRESH_SECRET=${JWT_REFRESH_SECRET}
       - RAPIDAPI_KEY=${RAPIDAPI_KEY}
-    depends_on:
-      postgres:
-        condition: service_healthy
+    volumes:
+      - tracker-data:/app/prisma
     networks:
       - tracker-network
     healthcheck:
@@ -66,17 +45,12 @@ services:
         condition: service_healthy
     networks:
       - tracker-network
-    healthcheck:
-      test: ["CMD", "wget", "--no-verbose", "--tries=1", "--spider", "http://localhost:3000/health"]
-      interval: 30s
-      timeout: 10s
-      retries: 3
 
 networks:
   tracker-network:
     driver: bridge
 
 volumes:
-  postgres-data:
+  tracker-data:
     driver: local
 
