--- a/backend/package.json
+++ b/backend/package.json
@@ -22,6 +22,7 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
+    "fastify-type-provider-zod": "^6.1.0",
     "zod": "^3.23.8"
   },
   "devDependencies": {
