--- a/backend/package.json
+++ b/backend/package.json
@@ -22,8 +22,9 @@
     "dotenv": "^16.4.5",
     "fastify": "^4.28.1",
     "fastify-plugin": "^4.5.1",
-    "fastify-type-provider-zod": "^1.1.9",
-    "zod": "^3.23.8"
+    "fastify-type-provider-zod": "1.2.0",
+    "zod": "3.24.2",
+    "zod-to-json-schema": "3.24.6"
   },
   "devDependencies": {
     "@types/node": "^20.14.10",
